--- a/sunnyside-agency-landing-page-main/sunnyside-agency-landing-page-main/css/main.css
+++ b/sunnyside-agency-landing-page-main/sunnyside-agency-landing-page-main/css/main.css
@@ -132,7 +132,10 @@ a {
   background-position: center;
 }
 .section-feature .flex-section .container-message {
-  padding: 8%;
+  padding: 0 8%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .section-feature .flex-section .container-message .message-title {
   font-size: 50px;
@@ -149,9 +152,11 @@ a {
   text-transform: uppercase;
   font-size: 25px;
   color: #24303E;
-  font-weight: 600;
+  font-weight: 700;
   position: relative;
+  letter-spacing: 1px;
   z-index: 1;
+  width: max-content;
 }
 .section-feature .flex-section .container-message a.btn-link::before {
   content: "";
